@@ -7,13 +7,13 @@
  *
  * Based on the original code of Anope by Anope Team.
  * Based on the original code of Thales by Lucas.
- * 
+ *
  * $Id$
  *
  */
 
 #include "denora.h"
-#define AUTHOR "Trystan"
+#define AUTHOR "Denora"
 #define VERSION "1.0"
 
 int m_do_uptime(User * u, int ac, char **av);
